--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'ch.qos.logback:logback-core:1.1.2'
     compile 'ch.qos.logback:logback-classic:1.1.2'
     compile 'com.jidesoft:jide-oss:3.6.4'
+    compile 'org.apache.commons:commons-lang3:3.3.2'
 
     testCompile 'org.testng:testng:6.8.8'
     testCompile 'junit:junit:4.11'
